# jellyfin-api-client

./: LICENSE  README.md  pyproject.toml
.github/workflows/: check-jellyfin-release.yml
jellyfin_api_client/: __init__.py  client.py  types.py
jellyfin_api_client/models/: __init__.py  access_schedule.py  activity_log_entry.py  activity_log_entry_message.py  activity_log_entry_query_result.py  activity_log_entry_start_message.py  activity_log_entry_stop_message.py  add_virtual_folder_dto.py  admin_notification_dto.py  album_info.py  album_info_artist_provider_ids.py  album_info_provider_ids.py  album_info_provider_ids_type_0.py  album_info_remote_search_query.py  all_theme_media_result.py  architecture.py  artist_info.py  artist_info_provider_ids.py  artist_info_provider_ids_type_0.py  artist_info_remote_search_query.py  authenticate_user_by_name.py  authentication_info.py  authentication_info_query_result.py  authentication_result.py  base_item.py  base_item_dto.py  base_item_dto_image_blur_hashes.py  base_item_dto_image_blur_hashes_art.py  base_item_dto_image_blur_hashes_backdrop.py  base_item_dto_image_blur_hashes_banner.py  base_item_dto_image_blur_hashes_box.py  base_item_dto_image_blur_hashes_box_rear.py  base_item_dto_image_blur_hashes_chapter.py  base_item_dto_image_blur_hashes_disc.py  base_item_dto_image_blur_hashes_logo.py  base_item_dto_image_blur_hashes_menu.py  base_item_dto_image_blur_hashes_primary.py  base_item_dto_image_blur_hashes_profile.py  base_item_dto_image_blur_hashes_screenshot.py  base_item_dto_image_blur_hashes_thumb.py  (+360 more)
(+404 files in other folders)
